@@ -11,6 +11,7 @@ TODO for 0.27
 - Update .spec.in file
 - Ungroup forgetting font family bug
 - Fix places where bbox is not tested for emptyness
+- Fix misplaced draws if viewBox present
 
 Other tasks
 ===========
