@@ -1,5 +1,8 @@
 2002-09-25  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/libnr/nr-rect.c (nr_rect_d_matrix_d_transform): New method
+	(nr_rect_f_matrix_f_transform): Ditto
+
 	* src/sp-object-repr.c (sp_object_type_lookup): Added <pattern>
 
 	* src/sp-pattern.h: New file
